page nav z-index fix

--- a/styles.scss
+++ b/styles.scss
@@ -670,6 +670,7 @@ footer {
     width: 95%;
   }
   aside {
+    z-index: 98;
     position: fixed;
     top: 50%;
     right: 10px;
